--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
     "build": "tsc --build",
     "build:clean": "tsc --build --clean",
-    "start:prod": "node dist/index.js"
+    "start:prod": "node dist/index.js",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
@@ -25,7 +26,12 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.34",
+    "uuid": "^8.3.2"
   }
 }
