--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+/src/database/*.sqlite
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
