--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/uuid": "^8.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.34",
