--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@types/uuid": "^8.3.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
